--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
